[package]
name = "libunbound"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libunbound-sys = {path="../libunbound-sys"}
thiserror = "1.0"
tokio = {workspace=true, features=["sync"]}
hickory-proto = "0.24"
libc = "0.2"

[dev-dependencies]
tokio = {workspace=true, features=["macros"]}

[target.'cfg(not(any(windows, target_os="macos")))'.dependencies]
openssl = { workspace=true }

[target.'cfg(any(windows, target_os="macos"))'.dependencies]
openssl = { workspace=true, features=["vendored"] }
